--- a/FamaciasApi/FamaciasApi.csproj
+++ b/FamaciasApi/FamaciasApi.csproj
@@ -5,11 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="DAL\" />
+    <Folder Include="BOL\" />
+    <Folder Include="Models\" />
+    <Folder Include="DTO\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.3" />
   </ItemGroup>
 
 </Project>
