--- a/FamaciasApi/FamaciasApi.csproj
+++ b/FamaciasApi/FamaciasApi.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DAL\" />
     <Folder Include="BOL\" />
-    <Folder Include="Models\" />
     <Folder Include="DTO\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
@@ -15,6 +13,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Oracle.ManagedDataAccess">
+      <HintPath>..\..\..\..\Documents\Oracle.ManagedDataAccess.Core.2.12.0-beta3\lib\netstandard2.0\Oracle.ManagedDataAccess.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
