--- a/FamaciasApi/appsettings.json
+++ b/FamaciasApi/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PreOrclApiContext": "Server=(localdb)\\mssqllocaldb;Database=PreOrclApiContext-04e8e2eb-15d9-4d2a-bebf-e3d83a0ae180;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
