--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Common\Common.Entity.csproj" />
   </ItemGroup>
 
 </Project>
