--- a/FamaciasApi/PreOrclApi.csproj
+++ b/FamaciasApi/PreOrclApi.csproj
@@ -16,7 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Common.BOL\Common.BOL.csproj" />
+    <ProjectReference Include="..\Common\Common.Entity.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
