--- a/PreOrclApiTest/PreOrclApiTest.csproj
+++ b/PreOrclApiTest/PreOrclApiTest.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Common\Common.Entity.csproj" />
     <ProjectReference Include="..\Data\Data.csproj" />
     <ProjectReference Include="..\FamaciasApi\PreOrclApi.csproj" />
   </ItemGroup>
