--- a/FamaciasApi/Properties/launchSettings.json
+++ b/FamaciasApi/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "FamaciasApi": {
+    "PreOrclApi": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
