Se hacen modificaciones en la estructura

--- a/PreOrclBackEnd/PreOrclApi/PreOrclApi.csproj
+++ b/PreOrclBackEnd/PreOrclApi/PreOrclApi.csproj
@@ -24,7 +24,7 @@
 
   <ItemGroup>
     <Reference Include="Oracle.ManagedDataAccess">
-      <HintPath>..\..\..\..\Documents\Oracle.ManagedDataAccess.Core.2.12.0-beta3\lib\netstandard2.0\Oracle.ManagedDataAccess.dll</HintPath>
+      <HintPath>..\..\..\..\..\Documents\Oracle.ManagedDataAccess.Core.2.12.0-beta3\lib\netstandard2.0\Oracle.ManagedDataAccess.dll</HintPath>
     </Reference>
   </ItemGroup>
 
