--- a/PreOrclBackEnd/PreOrclApiTest/PreOrclApiTest.csproj
+++ b/PreOrclBackEnd/PreOrclApiTest/PreOrclApiTest.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\PreOrclApi\PreOrclApi.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Oracle.ManagedDataAccess">
+      <HintPath>..\..\..\..\..\Documents\Oracle.ManagedDataAccess.Core.2.12.0-beta3\lib\netstandard2.0\Oracle.ManagedDataAccess.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
