Se suben cambios en nUGET

--- a/PreOrclBackEnd/Data/Data.csproj
+++ b/PreOrclBackEnd/Data/Data.csproj
@@ -9,6 +9,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Oracle.ManagedDataAccess.Core" Version="2.18.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Common\Common.Entity.csproj" />
   </ItemGroup>
 
