--- a/PreOrclBackEnd/Data/Data.csproj
+++ b/PreOrclBackEnd/Data/Data.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common.Utilities\Common.Utilities.csproj" />
     <ProjectReference Include="..\Common\Common.Entity.csproj" />
   </ItemGroup>
 
