Correcciones en ingreso de información

--- a/PreOrclFrontEnd/appsettings.json
+++ b/PreOrclFrontEnd/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "PreOrclFrontEndContext": "Server=(localdb)\\mssqllocaldb;Database=PreOrclFrontEndContext-02dab24b-2f32-4736-b485-163f882842fe;Trusted_Connection=True;MultipleActiveResultSets=true",
     "PreOrclFrontEndDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PreOrclFrontEnd;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "UriHelpers": {
+    "BaseUrl": "https://preorclapi2018.azurewebsites.net/api/"
   }
 }
