--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,11 @@
 ################################################################################
 
 /PreOrclFrontEnd/.vs/PreOrclFrontEnd/v15/Server/sqlite3/storage.ide
+/PreOrclFrontEnd/.vs/PreOrclFrontEnd/v15/Server/sqlite3/db.lock
+/PreOrclFrontEnd/.vs/PreOrclFrontEnd/v15/Server/sqlite3/storage.ide-shm
+/PreOrclFrontEnd/.vs/PreOrclFrontEnd/v15/Server/sqlite3/storage.ide-wal
+/PreOrclFrontEnd/bin/Debug/netcoreapp2.1/PreOrclFrontEnd.deps.json
+/PreOrclFrontEnd/bin/Debug/netcoreapp2.1/PreOrclFrontEnd.dll
+/PreOrclFrontEnd/bin/Debug/netcoreapp2.1/PreOrclFrontEnd.pdb
+/PreOrclFrontEnd/bin/Debug/netcoreapp2.1/PreOrclFrontEnd.Views.dll
+/PreOrclFrontEnd/bin/Debug/netcoreapp2.1/PreOrclFrontEnd.Views.pdb
