--- a/PreOrclFrontEnd/appsettings.json
+++ b/PreOrclFrontEnd/appsettings.json
@@ -10,8 +10,8 @@
     "PreOrclFrontEndDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PreOrclFrontEnd;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "UriHelpers": {
-    //"BaseUrl": "https://preorclapi2018.azurewebsites.net/api/",
-    "BaseUrl": "https://localhost:44341/api/"
+    "BaseUrl": "https://preorclapi2018.azurewebsites.net/api/",
+    //"BaseUrl": "https://localhost:44341/api/"
 
   }
 }
