--- a/PreOrclBackEnd/PreOrclApi/PreOrclApi.csproj
+++ b/PreOrclBackEnd/PreOrclApi/PreOrclApi.csproj
@@ -18,12 +18,12 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Common.BOL\Common.BOL.csproj" />
     <ProjectReference Include="..\Common\Common.Entity.csproj" />
-    <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
 
 </Project>
