--- a/PreOrclFrontEnd/PreOrclFrontEnd.csproj
+++ b/PreOrclFrontEnd/PreOrclFrontEnd.csproj
@@ -18,6 +18,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.Graph" Version="1.12.0" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="2.7.0" />
     <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
     <PackageReference Include="System.Security.Cryptography.Algorithms" Version="4.3.1" />
