--- a/PreOrclFrontEnd/appsettings.json
+++ b/PreOrclFrontEnd/appsettings.json
@@ -10,8 +10,18 @@
     "PreOrclFrontEndDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PreOrclFrontEnd;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "UriHelpers": {
-    "BaseUrl": "https://preorclapi2018.azurewebsites.net/api/",
+    "BaseUrl": "https://preorclapi2018.azurewebsites.net/api/"
     //"BaseUrl": "https://localhost:44341/api/"
 
+  },
+ "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "CallbackPath": "/signin-oidc",
+    "BaseUrl": "https://localhost:44334",
+    "ClientId": "c29c2d9c-8219-4b67-8012-7f8f1fb17947",
+    "ClientSecret": "cqlrcFPUMS72807)*)hqIN}", // This sample uses a password (secret) to authenticate. Production apps should use a certificate.
+    "Scopes": "openid email profile offline_access",
+    "GraphResourceId": "https://graph.microsoft.com/",
+    "GraphScopes": "User.Read User.ReadBasic.All Mail.Send"
   }
-}
+  }
