--- a/PreOrclFrontEnd/appsettings.json
+++ b/PreOrclFrontEnd/appsettings.json
@@ -14,12 +14,12 @@
     //"BaseUrl": "https://localhost:44341/api/"
 
   },
- "AzureAd": {
+  "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
-    "CallbackPath": "/signin-oidc",
-    "BaseUrl": "https://localhost:44334",
-    "ClientId": "c29c2d9c-8219-4b67-8012-7f8f1fb17947",
-    "ClientSecret": "cqlrcFPUMS72807)*)hqIN}", // This sample uses a password (secret) to authenticate. Production apps should use a certificate.
+    "CallbackPath": "/signin-microsoft",
+    "BaseUrl": "http://localhost:50222",
+    "ClientId": "212a93ce-c93e-43b8-adaf-cc32d3606e75",
+    "ClientSecret": "ysCRFE4_}fenfmVKW2574${", // This sample uses a password (secret) to authenticate. Production apps should use a certificate.
     "Scopes": "openid email profile offline_access",
     "GraphResourceId": "https://graph.microsoft.com/",
     "GraphScopes": "User.Read User.ReadBasic.All Mail.Send"
