--- a/PreOrclFrontEnd/PreOrclFrontEnd.csproj
+++ b/PreOrclFrontEnd/PreOrclFrontEnd.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <Folder Include="LogFile\" />
+    <Folder Include="Views\Account\" />
     <Folder Include="wwwroot\js\NewFolder\" />
   </ItemGroup>
 
