--- a/PreOrclBackEnd/PreOrclApi/appsettings.json
+++ b/PreOrclBackEnd/PreOrclApi/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PreOrclApiContext": "Server=(localdb)\\mssqllocaldb;Database=PreOrclApiContext-04e8e2eb-15d9-4d2a-bebf-e3d83a0ae180;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "PreOrclApiContext": "Server=(localdb)\\mssqllocaldb;Database=PreOrclApiContext-04e8e2eb-15d9-4d2a-bebf-e3d83a0ae180;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DBConnectionOrcl": "Data Source=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=wkapp.southcentralus.cloudapp.azure.com)(PORT=1521)))(CONNECT_DATA=(SERVER=DEDICATED)(SID=farmacia)));User Id=dmendez;Password=1234;"
   }
 }
