--- a/PreOrclBackEnd/Common.BOL/Common.BOL.csproj
+++ b/PreOrclBackEnd/Common.BOL/Common.BOL.csproj
@@ -6,7 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.Entity.csproj" />
-    <ProjectReference Include="..\Data\Data.csproj" />
+    <ProjectReference Include="..\Data\Common.Data.csproj" />
   </ItemGroup>
 
 </Project>
