--- a/PreOrclBackEnd/Common.Data/Common.Data.csproj
+++ b/PreOrclBackEnd/Common.Data/Common.Data.csproj
@@ -12,8 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Common.Entity\Common.Entity.csproj" />
     <ProjectReference Include="..\Common.Utilities\Common.Utilities.csproj" />
-    <ProjectReference Include="..\Common\Common.Entity.csproj" />
   </ItemGroup>
 
 </Project>
