--- a/PreOrclFrontEnd/appsettings.json
+++ b/PreOrclFrontEnd/appsettings.json
@@ -11,7 +11,14 @@
   },
   "UriHelpers": {
     "BaseUrl": "https://preorclapi2018.azurewebsites.net/api/"
-    //"BaseUrl": "https://localhost:44341/api/"
+  },
+  "MSGraphConfiguration": {
+    "CallbackPath": "http://localhost:50222/Auth/LoginMicrosoft/",
+    "Scope": "offline_access calendars.read user.read user.readbasic.all mail.read",
+    "ClientId": "212a93ce-c93e-43b8-adaf-cc32d3606e75",
+    "ClientSecret": "ysCRFE4_}fenfmVKW2574${",
+    "RedirectUrl": "http://localhost:50222/Auth/LoginMicrosoft/",
+    "Tenant": "common"
 
   },
   "AzureAd": {
@@ -24,4 +31,4 @@
     "GraphResourceId": "https://graph.microsoft.com/",
     "GraphScopes": "User.Read User.ReadBasic.All Mail.Send"
   }
-  }
+}
