--- a/PreOrclBackEnd/Common.BOL/Common.BOL.csproj
+++ b/PreOrclBackEnd/Common.BOL/Common.BOL.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Graph" Version="1.14.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Common.Data\Common.Data.csproj" />
     <ProjectReference Include="..\Common.Entity\Common.Entity.csproj" />
   </ItemGroup>
