--- a/PreOrclBackEnd/Common.Entity/Common.Entity.csproj
+++ b/PreOrclBackEnd/Common.Entity/Common.Entity.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Graph" Version="1.14.0" />
+  </ItemGroup>
+
 </Project>
