Se guarda mejoras en creacion de actividades

--- a/PreOrclFrontEnd/appsettings.json
+++ b/PreOrclFrontEnd/appsettings.json
@@ -14,7 +14,7 @@
   },
   "MSGraphConfiguration": {
     "CallbackPath": "http://localhost:50222/Auth/LoginMicrosoft/",
-    "Scope": "offline_access calendars.read user.read user.readbasic.all mail.read",
+    "Scope": "offline_access calendars.read calendars.readwrite calendars.read.shared calendars.readwrite.shared user.read user.readbasic.all mail.read",
     "ClientId": "212a93ce-c93e-43b8-adaf-cc32d3606e75",
     "ClientSecret": "ysCRFE4_}fenfmVKW2574${",
     "RedirectUrl": "http://localhost:50222/Auth/LoginMicrosoft/",
