--- a/PreOrclFrontEnd/PreOrclFrontEnd.csproj
+++ b/PreOrclFrontEnd/PreOrclFrontEnd.csproj
@@ -27,6 +27,14 @@
 
   <ItemGroup>
     <None Include="wwwroot\templateAdmin\.github\ISSUE_TEMPLATE.md" />
+    <None Include="wwwroot\tooltipster-master\dist\js\plugins\tooltipster\SVG\tooltipster-SVG.js" />
+    <None Include="wwwroot\tooltipster-master\dist\js\plugins\tooltipster\SVG\tooltipster-SVG.min.js" />
+    <None Include="wwwroot\tooltipster-master\dist\js\tooltipster.bundle.js" />
+    <None Include="wwwroot\tooltipster-master\dist\js\tooltipster.bundle.min.js" />
+    <None Include="wwwroot\tooltipster-master\dist\js\tooltipster.main.js" />
+    <None Include="wwwroot\tooltipster-master\dist\js\tooltipster.main.min.js" />
+    <None Include="wwwroot\tooltipster-master\LICENSE" />
+    <None Include="wwwroot\tooltipster-master\README.md" />
   </ItemGroup>
 
   <ItemGroup>
