--- a/PreOrclFrontEnd/appsettings.json
+++ b/PreOrclFrontEnd/appsettings.json
@@ -10,7 +10,7 @@
     "PreOrclFrontEndDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PreOrclFrontEnd;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "UriHelpers": {
-    "BaseUrl": "https://localhost:44341/api/"
+    "BaseUrl": "https://preorclapi2018.azurewebsites.net/api/"
   },
   "MSGraphConfiguration": {
     "CallbackPath": "http://localhost:50222/Auth/LoginMicrosoft/",
