Mejoras finales del sistema

--- a/PreOrclFrontEnd/appsettings.json
+++ b/PreOrclFrontEnd/appsettings.json
@@ -10,21 +10,21 @@
     "PreOrclFrontEndDBContextConnection": "Server=(localdb)\\mssqllocaldb;Database=PreOrclFrontEnd;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "UriHelpers": {
-    "BaseUrl": "https://localhost:44341/api/"
+    "BaseUrl": "https://preorclapi2018.azurewebsites.net/api/"
   },
   "MSGraphConfiguration": {
-    "CallbackPath": "http://localhost:50222/Auth/LoginMicrosoft/",
+    "CallbackPath": "https://preorclfrontend.azurewebsites.net/Auth/LoginMicrosoft/",
     "Scope": "offline_access calendars.read calendars.readwrite calendars.read.shared calendars.readwrite.shared user.read user.readbasic.all mail.read",
     "ClientId": "212a93ce-c93e-43b8-adaf-cc32d3606e75",
     "ClientSecret": "ysCRFE4_}fenfmVKW2574${",
-    "RedirectUrl": "http://localhost:50222/Auth/LoginMicrosoft/",
+    "RedirectUrl": "https://preorclfrontend.azurewebsites.net/Auth/LoginMicrosoft/",
     "Tenant": "common"
 
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "CallbackPath": "/signin-microsoft",
-    "BaseUrl": "http://localhost:50222",
+    "BaseUrl": "https://preorclfrontend.azurewebsites.net",
     "ClientId": "212a93ce-c93e-43b8-adaf-cc32d3606e75",
     "ClientSecret": "ysCRFE4_}fenfmVKW2574${", // This sample uses a password (secret) to authenticate. Production apps should use a certificate.
     "Scopes": "openid email profile offline_access",
